<resources>
    <string name="app_name">Images browser</string>
    <string name="tv_image_id">Image ID: %1$d</string>
    <string name="tvAuthor">Author: %1$s</string>
    <string name="tvWidth">Width: %1$d</string>
    <string name="tvHeight">Height: %1$d</string>
    <string name="tvDownloadUrl">Download url: <u>%1$s</u> </string>
    <string name="tvLoading">Loading…</string>
    <string name="ivImageDescription">item image</string>
    <string name="ivDetailedImageDescription">Detailed image</string>
    <string name="no_internet_connection_message">You don\'t have an internet connection.
        You won\'t be able to download images without an internet connection. </string>
    <string name="downloading_data_error_message">There was an error downloading the images,
        please try again using the refresh button or check your internet connection.</string>
    <string name="refresh_list_button">refresh list button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
